...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="Engineering Station"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_station_switches_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_station_title"
        android:layout_marginTop="24dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"/>

...
